--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -174,7 +174,7 @@
 }
 
 .header-area .main-header-area .main-menu ul li .submenu li:hover a {
-  color: #78b454;
+  color: #ed1f26;
 }
 
 .header-area .main-header-area .main-menu ul li:hover > .submenu {
