--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -147,8 +147,8 @@
   width: Calc(100% * 8 );
   z-index: 2;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.02);
-  opacity: 1;
-  /*visibility: hidden;*/
+  opacity: 0;
+  visibility: hidden;
   -webkit-transition: 0.6s;
   -moz-transition: 0.6s;
   -o-transition: 0.6s;
