--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,8 +7,13 @@
 		background-color: #bc0a0a;
 	}
 }
-
+@media (min-width: 992px){
+	.destop span{
+	  display:none;
+	}
+}
 @media (min-width: 992px) and (max-width: 1200px){
 .container {
     max-width: 1200px;
 }
+
